hot fix: ui: show human readable time

--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,7 @@
 
 /* display the button if list row is selected */
 .list-selected .list-button {
-  display: block;
+  display: inline;
   pointer-events: all;
   cursor: default;
 }
